; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_Fn8D3.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_Fn8D3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, i32, i32, i32, i32, i32)* @Fn8D3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Fn8D3(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %19 = load i32, i32* %10, align 4
  %20 = mul nsw i32 3, %19
  %21 = load i32, i32* %11, align 4
  %22 = mul nsw i32 2, %21
  %23 = add nsw i32 %20, %22
  %24 = load i32, i32* %12, align 4
  %25 = mul nsw i32 3, %24
  %26 = add nsw i32 %23, %25
  %27 = load i32, i32* %13, align 4
  %28 = add nsw i32 %26, %27
  %29 = load i32, i32* %14, align 4
  %30 = add nsw i32 %28, %29
  %31 = load i32, i32* %15, align 4
  %32 = add nsw i32 %30, %31
  %33 = load i32, i32* %16, align 4
  %34 = add nsw i32 %32, %33
  %35 = load i32, i32* %17, align 4
  %36 = add nsw i32 %34, %35
  %37 = load i32, i32* %18, align 4
  %38 = add nsw i32 %37, 5
  %39 = sdiv i32 %36, %38
  ret i32 %39
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
